kubernetes/apps/default/homepage/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    # hajimari.io/appName: "traefik"
    # hajimari.io/enable: "true"
    # hajimari.io/icon: "web"
    # hajimari.io/instance: "monitor"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "homepage.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
      namespace: cert-manager
  rules:
    - host: "homepage.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
