kubernetes/apps/default/homepage/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    # traefik.ingress.kubernetes.io/router.middlewares: "network-internal-only@kubernetescrd,network-default-middlewares@kubernetescrd"
    # traefik.ingress.kubernetes.io/router.middlewares: "network-internal-only@kubernetescrd,network-default-middlewares@kubernetescrd,network-middlewares-authentik@kubernetescrd"
    # traefik.enable: "true"
    # traefik.http.services.homepage.loadbalancer.server.port: "3000"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`homepage.${SECRET_DOMAIN}`)"
      middlewares:
        - name: internal-only@kubernetescrd
          namespace: network
        - name: default-middlewares@kubernetescrd
          namespace: network
        # - name: network-middlewares-authentik@kubernetescrd
      services:
        - kind: Service
          name: homepage
          port: 3000
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: homepage-dashboard-tls
    domains:
      - main: "${SECRET_DOMAIN}"
        sans:
          - "*.${SECRET_DOMAIN}"
          - "homepage.${SECRET_DOMAIN}"
